bootstrap and next-css

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/NathanJGaul/simple-notes#readme",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.2.1",
     "next": "^7.0.2",
     "react": "^16.7.0",
